--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "reactstrap": "^9.1.4"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
