--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
-    "reactstrap": "^9.1.4"
+    "reactstrap": "^9.1.4",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
