--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^12.3.1",
+    "@stripe/react-stripe-js": "^1.13.0",
+    "@stripe/stripe-js": "^1.41.0",
     "bootstrap": "^5.2.0",
     "next": "12.2.4",
     "react": "18.2.0",
