--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@stripe/react-stripe-js": "^1.13.0",
     "@stripe/stripe-js": "^1.41.0",
     "bootstrap": "^5.2.0",
+    "js-cookie": "^3.0.1",
     "next": "12.2.4",
+    "next-cookies": "^2.0.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
@@ -21,6 +23,7 @@
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
