--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,17 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.1.2",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "typescript": "4.7.4"
